--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ src/__pycache__/removeSpuriousMinutiae.cpython-36.pyc
 src/__pycache__/getTerminationBifurcation.cpython-36.pyc
 .idea/
 venv/
+*.pyc
